[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/pauseMenu.gd" type="Script" id=2]
[ext_resource path="res://asset/60-lines.png" type="Texture" id=3]

[node name="pauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 33.0323, 19.3548 )
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 437.0
margin_top = 263.0
margin_right = 587.0
margin_bottom = 341.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 16.0
theme = ExtResource( 1 )
text = "Paused"
align = 1
valign = 1
uppercase = true

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 150.0
margin_bottom = 26.0

[node name="ButtonResume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 150.0
margin_bottom = 52.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 1 )
text = "Resume Game"

[node name="ButtonQuit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 150.0
margin_bottom = 78.0
theme = ExtResource( 1 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
